--- a/demofront/src/main/resources/templates/login.mustache
+++ b/demofront/src/main/resources/templates/login.mustache
@@ -19,7 +19,7 @@
 		</form>
 
  <script >
- var server = 'ec2-15-164-217-74.ap-northeast-2.compute.amazonaws.com:8080';
+ var server = 'http://momodemo.ddns.net:8080';
  
  function loginPost() {
 		var formdata = $("#loginForm").serializeArray();
