--- a/demofront/src/main/resources/templates/login.mustache
+++ b/demofront/src/main/resources/templates/login.mustache
@@ -19,7 +19,7 @@
 		</form>
 
  <script >
- var server = 'http://momodemo.ddns.net:8080';
+ var server = 'https://momodemo.ddns.net';
  
  function loginPost() {
 		var formdata = $("#loginForm").serializeArray();
