--- a/demofront/src/main/resources/templates/test.mustache
+++ b/demofront/src/main/resources/templates/test.mustache
@@ -18,6 +18,9 @@
 		<div class="form-group">
 			<a href="/index/login" role="button" class="btn btn-primary" id="btn-login" >로그인</a>
 		</div>
+		<div class="form-group">
+			<a href="http://localhost:8080/oauth2/authorization/google" role="button" class="btn btn-primary" id="btn-login" > 구글 로그인</a>
+		</div>
 		{{/nickname}}
 		{{#nickname}}
 		<div class="form-group">
